<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/ivPhoto"
            android:src="@drawable/photo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginStart="18dp" />
        <TextView
            android:id="@+id/tvFullName"
            android:text="@string/fullName"
            android:textSize="12dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/ivPhoto"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="18dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />
        <TextView
            android:id="@+id/tvAge"
            android:text="@string/age"
            android:textSize="12dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvFullName"
            app:layout_constraintLeft_toRightOf="@+id/ivPhoto"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />
        <TextView
            android:id="@+id/tvTelephone"
            android:text="@string/telephone"
            android:textSize="12dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvAge"
            app:layout_constraintLeft_toRightOf="@+id/ivPhoto"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />
        <TextView
            android:id="@+id/tvMyMail"
            android:text="@string/e_mail"
            android:textSize="12dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvTelephone"
            app:layout_constraintLeft_toRightOf="@+id/ivPhoto"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />
        <TextView
            android:id="@+id/tvTelegram"
            android:text="@string/telegram"
            android:textSize="12dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvMyMail"
            app:layout_constraintLeft_toRightOf="@+id/ivPhoto"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />
        <TextView
            android:id="@+id/tvCitizenship"
            android:text="@string/sitizenship"
            android:textSize="12dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvTelegram"
            app:layout_constraintLeft_toRightOf="@+id/ivPhoto"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/tvEducation"
            android:text="Образование: высшее (специалист)"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/ivPhoto"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="38dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp" />
        <TextView
            android:id="@+id/tvUniversity"
            android:text="@string/university"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvEducation"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="2dp"
            android:layout_marginStart="34dp"
            android:layout_marginEnd="18dp" />
        <TextView
            android:id="@+id/tvFaculty"
            android:text="@string/faculty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvUniversity"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="2dp"
            android:layout_marginStart="34dp"
            android:layout_marginEnd="18dp" />
        <TextView
            android:id="@+id/tvSpecialty"
            android:text="@string/specialty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvFaculty"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="2dp"
            android:layout_marginStart="34dp"
            android:layout_marginEnd="18dp" />


    </android.support.constraint.ConstraintLayout>

    <fragment
        android:id="@+id/fragment2"
        android:name="ru.askar.appatlantteam.SwitchFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="9"
        tools:layout="@layout/fragment_switchscreen">

    </fragment>

</LinearLayout>