<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ru.askar.appatlantteam.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.v7.widget.CardView
                android:id="@+id/cvPost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tvPost"
                        android:text="@string/post"
                        android:textSize="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginStart="8dp" />
                    <EditText
                        android:id="@+id/etPost"
                        android:textSize="15dp"
                        android:inputType="number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toRightOf="@+id/tvPost"/>
                    <Button
                        android:id="@+id/btnPost"
                        android:text="@string/submit"
                        android:textSize="15dp"
                        android:layout_width="88dp"
                        android:layout_height="48dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintRight_toRightOf="parent" />
                    <TextView
                        android:id="@+id/tvTextPost"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/btnPost"
                        android:layout_marginTop="8dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:layout_marginLeft="18dp"
                        android:layout_marginRight="18dp"
                        android:layout_marginStart="18dp"
                        android:layout_marginEnd="18dp" />
                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/cvComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tvComment"
                        android:text="@string/comment"
                        android:textSize="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginStart="8dp" />
                    <EditText
                        android:id="@+id/etComment"
                        android:textSize="15dp"
                        android:inputType="number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toRightOf="@+id/tvComment" />
                    <Button
                        android:id="@+id/btnComment"
                        android:text="@string/submit"
                        android:textSize="15dp"
                        android:layout_width="88dp"
                        android:layout_height="48dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintRight_toRightOf="parent" />
                    <TextView
                        android:id="@+id/tvTextComment"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/btnComment"
                        android:layout_marginTop="8dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:layout_marginLeft="18dp"
                        android:layout_marginRight="18dp"
                        android:layout_marginStart="18dp"
                        android:layout_marginEnd="18dp" />

                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/cvUsers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvUsers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </android.support.v7.widget.RecyclerView>
            </android.support.v7.widget.CardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.v7.widget.CardView
                    android:id="@+id/cvPhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">
                    <ImageView
                        android:id="@+id/ivImage"
                        android:layout_width="100dp"
                        android:layout_height="100dp" />
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:id="@+id/cvTodo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">
                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/tvTextTodo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </android.support.constraint.ConstraintLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <fragment
        android:id="@+id/fragment1"
        android:name="ru.askar.appatlantteam.SwitchFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="9"
        tools:layout="@layout/fragment_switchscreen">

    </fragment>

</LinearLayout>
